<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fl_passres_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ResetPasswordFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_passres_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text_passres_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset_pss_title"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_passres_body"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/reset_pss_body"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_passres_title" />

        <EditText
            android:id="@+id/edit_passres_email"
            android:layout_width="320dp"
            android:layout_height="65dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/shape_rounded_border_primary"
            android:drawableStart="@drawable/ic_symbol_mail_24"
            android:drawablePadding="18dp"
            android:ems="10"
            android:hint="@string/reset_pss_email_hint"
            android:inputType="text|textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:paddingBottom="20dp"
            android:textColorHighlight="?attr/colorPrimaryVariant"
            android:textSize="16sp"
            android:windowSoftInputMode="stateAlwaysHidden|adjustResize|adjustPan|adjustResize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_passres_body" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_passres_send"
            android:layout_width="320dp"
            android:layout_height="45dp"
            android:background="@drawable/shape_rounded_filled_primary"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/reset_pss_button"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            app:iconTint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_passres_email" />

        <TextView
            android:id="@+id/text_passres_go_back_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="21dp"
            android:backgroundTint="?attr/colorPrimaryVariant"
            android:paddingBottom="54dp"
            android:text="@string/reset_pss_sign_in_link"
            android:textColor="@color/purple_0"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button_passres_send" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>